# 2026-1-CECD1-4-TD-01

./: .gitignore  README.md
.github/workflows/: android-debug.yml
Analysis/Image/GalleryAnalysisModule/: README.md  settings.gradle.kts
Analysis/Image/GalleryAnalysisModule/app/: build.gradle.kts
Analysis/Image/GalleryAnalysisModule/app/src/main/: AndroidManifest.xml
Analysis/Voice/: README_conversion.md  convert_voice_emotion_model.py  requirements_onnx_export.txt  requirements_tflite_convert.txt
Analysis/Voice/voice_emotion/: voice_emotion_prompt.py
DesktopApp/: README.md  app.py  requirements.txt
Frontend/: .gitignore  AGENTS.md  settings.gradle.kts
Frontend/app/: build.gradle.kts
Frontend/app/src/PhenoType/: AppUsageAnalyzer.kt  CallLogAnalyzer.kt  PhenotypeModels.kt  README_사용법.md
Frontend/app/src/main/: AndroidManifest.xml
Frontend/app/src/main/assets/models/: README.md
Frontend/app/src/main/cpp/: CMakeLists.txt  gemma_jni.cpp
Frontend/app/src/main/res/values/: strings.xml  (+1 more)
Frontend/docs/: 2026-05-27-progress.md  2026-05-28-progress.md  2026-05-29-progress.md  2026-05-30-progress.md  2026-06-01-gallery-analysis-merge-record.md  2026-06-02-progress.md  2026-06-02-rag-slot-prompt-policy.md  2026-06-02-voice-emotion-litert-conversion.md  2026-06-02-voice-emotion-ptl-integration.md  CODEX_STARTUP.md  checkpoint-11500-phone-apply.md  litert-migration-plan.md
Frontend/gradle/: libs.versions.toml
Frontend/gradle/wrapper/: gradle-wrapper.properties
Frontend/scripts/: merge_lora_checkpoint.py  push_gemma4_litertlm.ps1
종설_wkfy/: README.md
(+88 files in other folders)
